--- a/.github/workflows/OpenWRT_CI.yml
+++ b/.github/workflows/OpenWRT_CI.yml
@@ -110,6 +110,16 @@ jobs:
           cd $OPENWRT_PATH
           ./scripts/feeds update -a
           ./scripts/feeds install -a
+
+      - name: Fix Kernel Vermagic
+        run: |
+          cd $OPENWRT_PATH
+          VERSION=echo $REPO_BRANCH|tr -d 'v'
+          curl -s https://downloads.openwrt.org/releases/$VERSION/targets/x86/64/openwrt-$VERSION-x86-64.manifest | grep kernel | awk '{print $3}' | awk -F- '{print $3}' > vermagic
+          cat vermagic
+          cat include/kernel-defaults.mk | head -n 123 | tail -n +120
+          sed -i '121c \\tcp $(TOPDIR)/vermagic $(LINUX_DIR)/.vermagic' include/kernel-defaults.mk
+          cat include/kernel-defaults.mk | head -n 123 | tail -n +120
           
       - name: Load Custom Configuration
         run: |
