--- a/.github/workflows/OpenWRT_CI.yml
+++ b/.github/workflows/OpenWRT_CI.yml
@@ -117,9 +117,8 @@ jobs:
           VERSION=echo $REPO_BRANCH|tr -d 'v'
           curl -s https://downloads.openwrt.org/releases/$VERSION/targets/x86/64/openwrt-$VERSION-x86-64.manifest | grep kernel | awk '{print $3}' | awk -F- '{print $3}' > vermagic
           cat vermagic
-          cat include/kernel-defaults.mk | head -n 123 | tail -n +120
           sed -i '121c \\tcp $(TOPDIR)/vermagic $(LINUX_DIR)/.vermagic' include/kernel-defaults.mk
-          cat include/kernel-defaults.mk | head -n 123 | tail -n +120
+          #cat include/kernel-defaults.mk | head -n 123 | tail -n +120
           
       - name: Load Custom Configuration
         run: |
@@ -139,6 +138,8 @@ jobs:
         run: |
           cd $OPENWRT_PATH
           make -j$(nproc) || make -j1 V=s
+          cd $OPENWRT_PATH/bin/targets/*/*
+          echo "KERNEL=$(cat *.manifest | grep ^kernel | cut -d- -f2 | tr -d ' ')" >> $GITHUB_ENV
           echo "======================="
           echo "Space usage:"
           echo "======================="
@@ -162,25 +163,39 @@ jobs:
         uses: actions/upload-artifact@main
         with:
           name: OpenWrt_buildinfo
-          path: $OPENWRT_PATH/artifact/buildinfo/
+          path: ${{ env.OPENWRT_PATH }}/artifact/buildinfo/
 
       - name: Deliver package
         uses: actions/upload-artifact@main
         with:
           name: OpenWrt_package
-          path: $OPENWRT_PATH/artifact/package/
+          path: ${{ env.OPENWRT_PATH }}/artifact/package/
 
       - name: Deliver firmware
         uses: actions/upload-artifact@main
         with:
           name: OpenWrt_firmware
-          path: $OPENWRT_PATH/bin/targets/
+          path: ${{ env.OPENWRT_PATH }}/bin/targets/
 
       - name: Upload release asset
         if: github.event == 'release'
         uses: svenstaro/upload-release-action@v2
         with:
           repo_token: ${{ secrets.YOURTOKEN }}
-          file: $OPENWRT_PATH/artifact/firmware/*
+          file: ${{ env.OPENWRT_PATH }}/artifact/firmware/*
           tag: OpenWRT_${{ env.FIRMWARE_TAG }}-${{ env.REPO_BRANCH }}
           file_glob: true
+          body: |
+            **🐱‍🏍🐱‍🏍🐱‍🏍 OpenWrt Firmware ${{ env.FIRMWARE_TAG }} 🐱‍🏍🐱‍🏍🐱‍🏍**
+            ### 🐱‍👓 固件信息 🐱‍👓
+            - 🐱‍👤🐱‍👤 平台架构: ${{ env.DEVICE_TARGET }}-${{ env.DEVICE_SUBTARGET }}
+            - 🐱‍🐉🐱‍🐉 固件源码: ${{ env.REPO_URL }}
+            - 🐱‍💻🐱‍💻源码分支: ${{ env.REPO_BRANCH }}
+            - 🦝🦝 内核版本: ${{ env.KERNEL }}
+            - 🦈🦈 默认地址: 192.168.50.3
+            ### 🐱‍🚀 固件版本 🐱‍🚀
+            - 固件编译前最后一次➦[主源码](${{ env.REPO_URL }})更新记录
+            - ${{ env.COMMIT_AUTHOR }}
+            - ${{ env.COMMIT_DATE }}
+            - ${{ env.COMMIT_MESSAGE }}
+            - ${{ env.COMMIT_HASH }}
