--- a/.github/workflows/OpenWRT_CI.yml
+++ b/.github/workflows/OpenWRT_CI.yml
@@ -14,7 +14,6 @@ on:
     
 env:
   REPO_URL: https://github.com/openwrt/openwrt.git
-  REPO_BRANCH: v23.05.3
   CONFIG_FILE: .config
   DIY_SCRIPT: diy-script.sh
   CACHE_TOOLCHAIN: true
@@ -66,6 +65,8 @@ jobs:
       - name: Clone Source Code
         run: |
           df -hT $GITHUB_WORKSPACE
+          echo "VERSION=$(curl -sL https://api.github.com/repos/openwrt/openwrt/releases | grep -E 'tag_name\": \"v[0-9]+\.[0-9]+\.[0-9]+' -o | head -n 1 | tr -d 'tag_name\": \:v')" >> $GITHUB_ENV
+          echo "REPO_BRANCH=$(curl -sL https://api.github.com/repos/openwrt/openwrt/releases | grep -E 'tag_name\": \"v[0-9]+\.[0-9]+\.[0-9]+' -o | head -n 1 | tr -d 'tag_name\": \:')" >> $GITHUB_ENV
           git clone $REPO_URL --single-branch --depth=1 -b $REPO_BRANCH openwrt
           cd openwrt
           echo "OPENWRT_PATH=$PWD" >> $GITHUB_ENV
@@ -148,6 +149,7 @@ jobs:
           echo "======================="
           du -h ./ --max-depth=1
           du -h /mnt/openwrt/ --max-depth=1 || true
+          echo "DATA=$(date +"%Y.%m.%d %H:%M")" >> $GITHUB_ENV
 
       - name: Prepare artifact
         run: |
@@ -183,9 +185,9 @@ jobs:
         with:
           token: ${{ secrets.GITHUB_TOKEN }}
           artifacts: ${{ env.OPENWRT_PATH }}/artifact/firmware/*
-          tag: OpenWRT_${{ env.FIRMWARE_TAG }}-${{ env.REPO_BRANCH }}
+          tag: OpenWRT_${{ env.FIRMWARE_TAG }}🐱‍👓${{ env.DATE }}
           body: |
-            **🐱‍🏍🐱‍🏍🐱‍🏍 OpenWrt Firmware ${{ env.FIRMWARE_TAG }} 🐱‍🏍🐱‍🏍🐱‍🏍**
+            **🐱‍🏍🐱‍🏍🐱‍🏍 OpenWrt Firmware For ${{ env.FIRMWARE_TAG }} 🐱‍🏍🐱‍🏍🐱‍🏍**
             ### 🐱‍👓 固件信息 🐱‍👓
             - 🐱‍👤🐱‍👤 平台架构: ${{ env.DEVICE_TARGET }}-${{ env.DEVICE_SUBTARGET }}
             - 🐱‍🐉🐱‍🐉 固件源码: ${{ env.REPO_URL }}
