--- a/.github/workflows/OpenWRT_CI.yml
+++ b/.github/workflows/OpenWRT_CI.yml
@@ -152,7 +152,7 @@ jobs:
           echo "======================="
           du -h ./ --max-depth=1
           du -h /mnt/openwrt/ --max-depth=1 || true
-          echo "DATE=$(date +"%Y.%m.%d %H:%M")" >> $GITHUB_ENV
+          echo "DATE=$(date +"%Y.%m.%d_%H:%M")" >> $GITHUB_ENV
 
       - name: Prepare artifact
         run: |
