--- a/.github/workflows/ImmortalWRT_Cl.yml
+++ b/.github/workflows/ImmortalWRT_Cl.yml
@@ -200,12 +200,12 @@ jobs:
           file_glob: true
           body: |
             **🐱‍🏍🐱‍🏍🐱‍🏍 OpenWrt Official Firmware For ${{ env.FIRMWARE_TAG }} 🐱‍🏍🐱‍🏍🐱‍🏍**
-            ### 🐱‍👓 ${{ env.DATE }} 🐱‍👓
-            - 🐱‍👤🐱‍👤 平台架构: ${{ env.DEVICE_TARGET }}-${{ env.DEVICE_SUBTARGET }}
-            - 🐱‍🐉🐱‍🐉 固件源码: ${{ env.REPO_URL }}
-            - 🐱‍💻🐱‍💻 源码分支: ${{ env.REPO_BRANCH }}
-            - 🦝🦝 内核版本: ${{ env.KERNEL }}
-            - 🦈🦈 默认地址: 192.168.50.3
+            ###  ${{ env.DATE }} 
+            - ⛄⛄ 平台架构: ${{ env.DEVICE_TARGET }}-${{ env.DEVICE_SUBTARGET }} ⛄⛄
+            - 🦖🦖固件源码: ${{ env.REPO_URL }} 🦖🦖
+            - 😻💻 源码分支: ${{ env.REPO_BRANCH }} 💻😻
+            - 🦝 内核版本: ${{ env.KERNEL }} 🦝
+            - 🦈 默认地址: 192.168.50.3 🦈
             ### 🐱‍🚀 固件版本 🐱‍🚀
             - 固件编译前最后一次➦[主源码](${{ env.REPO_URL }})更新记录
             - ${{ env.COMMIT_AUTHOR }}
