--- a/.github/workflows/ImmortalWRT_Cl.yml
+++ b/.github/workflows/ImmortalWRT_Cl.yml
@@ -76,6 +76,8 @@ jobs:
           df -hT $GITHUB_WORKSPACE
           VERSION=$(curl -sL https://api.github.com/repos/openwrt/openwrt/tags | grep -E 'name\": \"v[0-9]+\.[0-9]+\.[0-9]+' -o | head -n 1 | tr -d 'name\": \"v')
           echo "VERSION=$VERSION" >> $GITHUB_ENV
+          MAGICVERSION=$(curl -sL https://api.github.com/repos/immortalwrt/immortalwrt/tags | grep -E 'name\": \"v[0-9]+\.[0-9]+\.[0-9]+' -o | head -n 1 | tr -d 'name\": \"v')
+          echo "MAGICVERSION=$MAGICVERSION" >> $GITHUB_ENV
           REPO_BRANCH=$(curl -sL https://api.github.com/repos/immortalwrt/immortalwrt/branches | grep -E 'name\": \"openwrt-[0-9]+\.[0-9]+' -o | tail -n 1 | sed 's/name\": \"//')
           echo "REPO_BRANCH=$REPO_BRANCH" >> $GITHUB_ENV
           echo "git clone $REPO_URL --single-branch --depth=1 -b $REPO_BRANCH immortalwrt"
@@ -100,7 +102,7 @@ jobs:
       - name: Fix Kernel Vermagic
         run: |
           cd $OPENWRT_PATH
-          curl -s https://downloads.immortalwrt.org/releases/$VERSION/targets/x86/64/immortalwrt-$VERSION-x86-64.manifest | grep kernel | awk '{print $3}' | awk -F- '{print $3}' > vermagic
+          curl -s https://downloads.immortalwrt.org/releases/$MAGICVERSION/targets/x86/64/immortalwrt-$MAGICVERSION-x86-64.manifest | grep kernel | awk '{print $3}' | awk -F- '{print $3}' > vermagic
           cat vermagic
           sed -i '121c \\tcp $(TOPDIR)/vermagic $(LINUX_DIR)/.vermagic' include/kernel-defaults.mk
           #cat include/kernel-defaults.mk | head -n 123 | tail -n +120
