--- a/.github/workflows/LEDE_CI.yml
+++ b/.github/workflows/LEDE_CI.yml
@@ -94,7 +94,7 @@ jobs:
         with:
           ccache: 'true'
           mixkey: ${{ env.FIRMWARE_TAG }}
-          prefix: ${{ github.workspace }}/lede
+          prefix: ${{ env.OPENWRT_PATH }}
 
       - name: Update feeds
         run: |
