--- a/.github/workflows/ImmortalWrt_Cl.yml
+++ b/.github/workflows/ImmortalWrt_Cl.yml
@@ -74,9 +74,9 @@ jobs:
       - name: Clone Source Code
         run: |
           df -hT $GITHUB_WORKSPACE
-          VERSION=$(curl -sL https://api.github.com/repos/openwrt/openwrt/tags | grep -E 'name\": \"v[0-9]+\.[0-9]+\.[0-9]+' -o | head -n 1 | tr -d 'name\": \"v')
+          VERSION=$(curl -sL https://api.github.com/repos/openwrt/openwrt/tags | grep -Eo '"name": "\S+([0-9]+\.[0-9]+\.[0-9]+(-[a-zA-Z0-9]+)?)+"' | sed 's/"name": "\(.*\)"/\1/' | head -n 1 | tr -d 'name\": \"v')
           echo "VERSION=$VERSION" >> $GITHUB_ENV
-          MAGICVERSION=$(curl -sL https://api.github.com/repos/immortalwrt/immortalwrt/tags | grep -E 'name\": \"v[0-9]+\.[0-9]+\.[0-9]+' -o | head -n 1 | tr -d 'name\": \"v')
+          MAGICVERSION=$(curl -sL https://api.github.com/repos/immortalwrt/immortalwrt/tags | grep -Eo '"name": "\S+([0-9]+\.[0-9]+\.[0-9]+(-[a-zA-Z0-9]+)?)+"' | sed 's/"name": "\(.*\)"/\1/' | head -n 1 | tr -d 'name\": \"v')
           echo "MAGICVERSION=$MAGICVERSION" >> $GITHUB_ENV
           REPO_BRANCH=$(curl -sL https://api.github.com/repos/immortalwrt/immortalwrt/branches | grep -E 'name\": \"openwrt-[0-9]+\.[0-9]+' -o | tail -n 1 | sed 's/name\": \"//')
           echo "REPO_BRANCH=$REPO_BRANCH" >> $GITHUB_ENV
@@ -92,6 +92,8 @@ jobs:
           echo "COMMIT_MESSAGE=$COMMIT_MESSAGE" >> $GITHUB_ENV
           COMMIT_HASH=$(git show -s --date=short --format="hash: %H")
           echo "COMMIT_HASH=$COMMIT_HASH" >> $GITHUB_ENV
+          COMMIT_NO=$(git rev-parse --short=7 HEAD)
+          echo "COMMIT_NO=$COMMIT_NO" >> $GITHUB_ENV
 
       - name: Update feeds
         run: |
@@ -104,7 +106,8 @@ jobs:
           cd $OPENWRT_PATH
           curl -s https://downloads.immortalwrt.org/releases/$MAGICVERSION/targets/x86/64/immortalwrt-$MAGICVERSION-x86-64.manifest | grep kernel | awk '{print $3}' | awk -F- '{print $3}' > vermagic
           cat vermagic
-          sed -i '121c \\tcp $(TOPDIR)/vermagic $(LINUX_DIR)/.vermagic' include/kernel-defaults.mk
+          sed 's|\$(LINUX_DIR)/.vermagic|\$(TOPDIR)/vermagic|g' include/kernel-defaults.mk
+          #sed -i '121c \\tcp $(TOPDIR)/vermagic $(LINUX_DIR)/.vermagic' include/kernel-defaults.mk
           #cat include/kernel-defaults.mk | head -n 123 | tail -n +120
 
       - name: Load Custom Configuration
@@ -201,7 +204,7 @@ jobs:
         with:
           repo_token: ${{ secrets.GITHUB_TOKEN }}
           file: ${{ env.OPENWRT_PATH }}/artifact/firmware/*
-          tag: OpenWRT-${{ env.VERSION }}_${{ env.DATE_YMD }}
+          tag: OpenWRT-${{ env.VERSION }}_${{ env.COMMIT_NO }}
           file_glob: true
           body: |
             **🐱‍🏍🐱‍🏍🐱‍🏍 OpenWrt Official Firmware For ${{ env.FIRMWARE_TAG }} 🐱‍🏍🐱‍🏍🐱‍🏍**
