--- a/config/immortalwrt.config
+++ b/config/immortalwrt.config
@@ -104,6 +104,7 @@ CONFIG_PACKAGE_libcap=y
 CONFIG_PACKAGE_libcap-bin=y
 CONFIG_PACKAGE_libcap-bin-capsh-shell="/bin/sh"
 CONFIG_PACKAGE_libcap-ng=y
+CONFIG_PACKAGE_libcron=y
 CONFIG_PACKAGE_libcurl=y
 CONFIG_PACKAGE_libdouble-conversion=y
 CONFIG_PACKAGE_libelf=y
