--- a/.github/workflows/ImmortalWrt_Cl.yml
+++ b/.github/workflows/ImmortalWrt_Cl.yml
@@ -67,7 +67,7 @@ jobs:
                                   libncursesw5-dev libpython3-dev libreadline-dev libssl-dev libtool lld llvm lrzsz mkisofs msmtp \
                                   nano ninja-build p7zip p7zip-full patch pkgconf python2.7 python3 python3-pip python3-ply \
                                   python3-docutils python3-pyelftools qemu-utils re2c rsync scons squashfs-tools subversion swig \
-                                  texinfo uglifyjs upx-ucl unzip vim wget xmlto xxd zlib1g-dev zstd
+                                  texinfo uglifyjs upx-ucl unzip vim wget xmlto xxd zlib1g-dev zstd clang-15 llvm-15 npm
           sudo -E apt-get -y autoremove --purge
           sudo -E apt-get clean
           df -h
