--- a/.github/workflows/ImmortalWrt_Cl.yml
+++ b/.github/workflows/ImmortalWrt_Cl.yml
@@ -57,7 +57,7 @@ jobs:
           DEBIAN_FRONTEND: noninteractive
         run: |
           #docker rmi `docker images -q`
-          docker rmi -f $(docker images -q)
+          docker system prune -a
           sudo rm -rf /usr/share/dotnet /etc/mysql /etc/php /etc/apt/sources.list.d /usr/local/lib/android
           sudo -E apt-get -y purge azure-cli ghc* zulu* hhvm llvm* firefox google* dotnet* powershell openjdk* adoptopenjdk* mysql* php* mongodb* dotnet* moby* snapd* || true
           sudo -E apt-get update
